fixed the gap

--- a/style/style.css
+++ b/style/style.css
@@ -7,12 +7,10 @@ body {
 
 .grid-container {
   display: grid;
-  grid-template-rows: repeat (12, 1fr);
-  grid-template-columns: repeat (6, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   grid-gap: 24px;
   padding: 24px;
-
-  display: grid;
 }
 
 .grid-element-1 {
